--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "magnific-popup": "^1.2.0",
     "next": "14.2.5",
     "owl.carousel": "^2.3.4",
