--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.1",
     "magnific-popup": "^1.2.0",
+    "markdown-it": "^14.1.0",
     "next": "14.2.5",
     "owl.carousel": "^2.3.4",
     "react": "^18",
