--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-loading-indicators": "^1.0.0"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
